--- a/First-Project/src/pages/artistas/artistas.html
+++ b/First-Project/src/pages/artistas/artistas.html
@@ -10,13 +10,13 @@
       <ion-avatar item-start>
         <ion-icon name="contact"></ion-icon>
       </ion-avatar>
-      <h1>Midiã</h1>
-      <p>O coração</p>
+      <h1>{{item.title}}</h1>
+      <p>{{item.description}}</p>
       <ion-badge item-end>View</ion-badge>
     </ion-item>
     <ion-item>
       <ion-avatar item-start>
-        <ion-icon name="contact"></ion-icon>
+        {{item.icon}}
       </ion-avatar>
       <h1>Orion</h1>
       <p>O PODEROSO</p>
