--- a/First-Project/src/pages/artistas/artistas.html
+++ b/First-Project/src/pages/artistas/artistas.html
@@ -4,73 +4,15 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="lista">
   <ion-list>
     <ion-item>
       <ion-avatar item-start>
         <ion-icon name="contact"></ion-icon>
       </ion-avatar>
-      <h1>{{item.title}}</h1>
+      <h1>{{item.text}}</h1>
       <p>{{item.description}}</p>
       <ion-badge item-end>View</ion-badge>
     </ion-item>
-    <ion-item>
-      <ion-avatar item-start>
-        {{item.icon}}
-      </ion-avatar>
-      <h1>Orion</h1>
-      <p>O PODEROSO</p>
-      <ion-badge item-end>View</ion-badge>
-    </ion-item>
-    <ion-item>
-      <ion-avatar item-start>
-        <ion-icon name="contact"></ion-icon>
-      </ion-avatar>
-      <h1>Jonathan</h1>
-      <p>O Mano</p>
-      <ion-badge item-end>View</ion-badge>
-    </ion-item>
-    <ion-item>
-      <ion-avatar item-start>
-        <ion-icon name="contact"></ion-icon>
-      </ion-avatar>
-      <h1>Wilson</h1>
-      <p>Grande Homem</p>
-      <ion-badge item-end>View</ion-badge>
-    </ion-item>
-    <ion-item>
-      <ion-avatar item-start>
-        <ion-icon name="contact"></ion-icon>
-      </ion-avatar>
-      <h1>Italo</h1>
-      <p>Cabuloso</p>
-      <ion-badge item-end>View</ion-badge>
-    </ion-item>
-
-    <ion-item>
-      <ion-avatar item-start>
-        <ion-icon name="contact"></ion-icon>
-      </ion-avatar>
-      <h1>Silvio</h1>
-      <p>Parceiro</p>
-      <ion-badge item-end>View</ion-badge>
-    </ion-item>
-
-    <ion-item>
-      <ion-avatar item-start>
-        <ion-icon name="contact"></ion-icon>
-      </ion-avatar>
-      <h1>Alécio</h1>
-      <p>Programador</p>
-      <ion-badge item-end>View</ion-badge>
-    </ion-item>
-    <ion-item>
-        <ion-avatar item-start>
-          <ion-icon name="contact"></ion-icon>
-        </ion-avatar>
-        <h1>Diego</h1>
-        <p>Outro programador</p>
-        <ion-badge item-end>View</ion-badge>
-      </ion-item>
   </ion-list>
 </ion-content>
