--- a/First-Project/src/pages/tabs/tabs.html
+++ b/First-Project/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Artistas" tabIcon="ionitron"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="house"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Músicas" tabIcon="musical-note"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Álbuns" tabIcon="albums"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Artistas" tabIcon="ionitron"></ion-tab>
 </ion-tabs>
